--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a {
   clear: both;
 }
 
-.app {
+.wrapper {
   min-height: 100%;
   display: flex;
   flex-direction: column;
@@ -353,6 +353,7 @@ a {
 }
 
 .text_search {
+  margin-bottom: 2px;
   padding-left: 16px;
   padding-right: 16px;
   width: 317px;
@@ -365,7 +366,8 @@ a {
 }
 
 .search_button {
-  height: 38px;
+  margin-top: 1px;
+  height: 37px;
   width: 38px;
   background-color: #ffffff;
   border: 1px solid #e6e6e6;
@@ -3437,6 +3439,38 @@ input[type=radio] {
 
 .quanity_input::-webkit-inner-spin-button {
   display: none;
+}
+
+.close-btn {
+  height: 30px;
+  outline: none;
+  border: 1px solid white;
+  border-radius: 20px;
+  width: 30px;
+  align-items: center;
+  cursor: pointer;
+  position: absolute;
+  font-size: 20px;
+  top: 6px;
+  right: 6px;
+}
+
+.error-msg {
+  color: white;
+  font-size: 40px;
+}
+
+.error-block {
+  width: 300px;
+  height: 120px;
+  border-radius: 20px;
+  background-color: #f44336;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-size: 30px;
+  color: white;
 }
 
 .beach__subscribe,
