saved project before work with product in json

--- a/style.css
+++ b/style.css
@@ -1366,16 +1366,13 @@ button {
 }
 
 .cart_summary {
-  display: block;
   outline: none;
+  width: 33px;
+  height: 30px;
+  background-color: white;
+  border: none;
+  cursor: pointer;
   position: relative;
-  padding-top: 20px;
-  padding-bottom: 10px;
-  transition: 0.3s;
-}
-
-.cart_summary:hover {
-  transform: scale(1.03);
 }
 
 .cart_summary::-webkit-details-marker {
@@ -1383,30 +1380,20 @@ button {
   outline: none;
 }
 
-.drop__cart {
-  left: -15px;
-  top: 60px;
-  padding-top: 5px;
-  background-color: #ffffff;
-  border-radius: 5px;
-  padding-left: 20px;
-  position: absolute;
-  border: 1px solid #e8e8e8;
-  z-index: -1;
-  padding-bottom: 6px;
-  display: flex;
-  text-align: left;
-  transition: 0.4s;
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-30px) scale(0.9);
+.stars {
+  width: 80px;
+  height: 15px;
 }
 
-.cart_summary:hover .drop__cart {
-  visibility: visible;
-  opacity: 1;
-  transform: translateY(0) scale(1);
-  z-index: 1;
+.drop__cart {
+  border: 1px solid #e8e8e8;
+  border-radius: 7px;
+  position: absolute;
+  top: 80px;
+  background-color: white;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .cart_block {
@@ -1435,14 +1422,15 @@ button {
   outline: none;
 }
 
-.header__cart:hover {
-  cursor: pointer;
-  outline: none;
-}
-
 .cart__image__content {
   width: 72px;
   height: 85px;
+}
+
+.item_bio {
+  display: flex;
+  width: 85px;
+  height: 30px;
 }
 
 .content__1 {
@@ -1460,6 +1448,15 @@ button {
   text-transform: uppercase;
   color: #c0c0c0;
   transition: 0.4s;
+}
+
+.delete_cart_item {
+  height: 16px;
+  width: 16px;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+  outline: none;
 }
 
 .cart__product {
@@ -1493,11 +1490,25 @@ button {
 }
 
 .cart__content {
-  display: flex;
-  align-items: center;
-  padding-bottom: 16px;
-  padding-top: 16px;
   border-bottom: 1px solid #ededed;
+  display: flex;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+.desk {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 10px;
+  margin-right: 10px;
+  width: 170px;
+}
+
+.right_desc_block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cart__text_1 {
