--- a/style.scss
+++ b/style.scss
@@ -457,7 +457,8 @@ a {
   margin-bottom: 60px;
 }
 
-.blocks__position_featured {
+.blocks__position_featured,
+.products{
   min-height: 839px;
   width: 1140px;
   display: flex;
@@ -548,6 +549,7 @@ a {
   width: 261px;
   min-height: 372px;
   transition: .4s;
+  margin-bottom: 36px;
 
 }
 
@@ -602,12 +604,21 @@ a {
   display: flex;
   position: absolute;
   height: 39px;
-  width: 123px;
+  width: 132px;
   border: 2px solid white;
   left: 70px;
   top: 94px;
+  font-size: 16px;
   text-align: center;
   border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  cursor: pointer;
+  color: white;
+  padding-left: 4px;
+  padding-right: 4px;
+  transition: .4s;
 }
 
 .featured_link:hover .sub__hover {
@@ -617,6 +628,7 @@ a {
 .featured_link:hover .cart_hover_img {
   display: block;
   padding-left: 8px;
+  transition: .4s;
 }
 
 .featured_link:hover .hover_text {
@@ -626,6 +638,7 @@ a {
   text-decoration: none;
   font-family: Lato;
   font-size: 13px;
+  transition: .4s;
   color: #ffffff;
 }
 
