updated text in cart

--- a/style.scss
+++ b/style.scss
@@ -544,6 +544,10 @@ a {
   padding-left: 14px;
 }
 
+.product-quantity{
+  margin-right: 4px;
+}
+
 .featured_link {
   display: block;
   width: 261px;
