--- a/style.css
+++ b/style.css
@@ -534,6 +534,10 @@ a {
   padding-left: 14px;
 }
 
+.product-quantity {
+  margin-right: 4px;
+}
+
 .featured_link {
   display: block;
   width: 261px;
