--- a/style.css
+++ b/style.css
@@ -449,7 +449,7 @@ a {
 
 .blocks__position_featured,
 .products {
-  min-height: 839px;
+  min-height: 239px;
   width: 1140px;
   display: flex;
   flex-wrap: wrap;
@@ -642,6 +642,10 @@ a {
 
 .cart__hover:hover {
   box-shadow: 0px 0px 10px 0 white;
+}
+
+.cart__hover:active {
+  background-color: #f16d7f;
 }
 
 .hover_text {
@@ -3005,7 +3009,6 @@ input[type=radio] {
 
 .like_also {
   padding-top: 119px;
-  margin-bottom: 72px;
 }
 
 .border_for_test {
