create new link for catalog products

--- a/style.css
+++ b/style.css
@@ -415,6 +415,17 @@ a {
   transform: scale(1.03);
 }
 
+.wqwqwq {
+  width: 200px;
+  height: 200px;
+  cursor: pointer;
+}
+
+.bvbvbv {
+  width: 100px;
+  height: 200px;
+}
+
 .white_arrow {
   margin-left: 6px;
   margin-bottom: 1px;
