--- a/style.scss
+++ b/style.scss
@@ -425,6 +425,17 @@ a {
   transform: scale(1.03);
 }
 
+.wqwqwq {
+  width: 200px;
+  height: 200px;
+  cursor: pointer;
+}
+
+.bvbvbv {
+  width: 100px;
+  height: 200px;
+}
+
 .white_arrow {
   margin-left: 6px;
   margin-bottom: 1px;
@@ -1453,7 +1464,7 @@ button {
   height: 29px;
 }
 
-.plusQua{
+.plusQua {
   text-align: center;
   width: 17px;
   height: 14px;
@@ -1462,7 +1473,7 @@ button {
   top: 0;
 }
 
-.minusQua{
+.minusQua {
   text-align: center;
   width: 17px;
   height: 14px;
@@ -1515,19 +1526,19 @@ button {
   display: flex;
 }
 
-.shopping_link:hover .shopping_title_1{
+.shopping_link:hover .shopping_title_1 {
   color: #f16d7f;
 }
 
-.shopping_link:hover .shopping_cart_color1{
+.shopping_link:hover .shopping_cart_color1 {
   color: #f16d7f;
 }
 
-.shopping_link:hover .shopping_cart_color2{
+.shopping_link:hover .shopping_cart_color2 {
   color: #f16d7f;
 }
 
-.shopping_link:hover .shopping_cart_color3{
+.shopping_link:hover .shopping_cart_color3 {
   color: #f16d7f;
 }
 
@@ -3332,7 +3343,7 @@ input[type=radio] {
   color: #6f6e6e;
 }
 
-.shopping_button_down{
+.shopping_button_down {
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
