updated single pages and links

--- a/style.css
+++ b/style.css
@@ -415,15 +415,8 @@ a {
   transform: scale(1.03);
 }
 
-.wqwqwq {
-  width: 200px;
-  height: 200px;
+.link_for_catalog_item {
   cursor: pointer;
-}
-
-.bvbvbv {
-  width: 100px;
-  height: 200px;
 }
 
 .white_arrow {
