updated shoppingComp styles

--- a/style.scss
+++ b/style.scss
@@ -3228,7 +3228,7 @@ input[type=radio] {
   font-size: 13px;
   font-weight: 400;
   color: #656565;
-  text-align: center;
+  padding-left: 14px;
   padding-top: 4px;
   position: relative;
 }
